# pyclops

./: .copier-answers.yml.jinja  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yaml  noxfile.py  pyproject.toml
docs/: index.md
notebooks/: dropbox_auth.ipynb  example.ipynb
src/petcam/: __init__.py
src/pyclops/: main.py  settings.py
systemd/: .service  commands.md
